---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/constant_folding/builtin_fold.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.16 = fix 0
temp.17 = builtin sin(temp.16)
s.18 = temp.17
temp.19 = fix 0
temp.20 = builtin cos(temp.19)
c.21 = temp.20
temp.22 = fix 4
temp.23 = builtin sqrt(temp.22)
r.24 = temp.23
temp.25 = fix 3.69921875
val.26 = temp.25
temp.27 = val.26
temp.28 = builtin fix@floor(temp.27)
f.29 = temp.28
temp.30 = f.29
storeprop temp.30, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.16 = fix 0
temp.17 = fix 0
s.18 = temp.17
temp.19 = fix 0
temp.20 = fix 1
c.21 = temp.20
temp.22 = fix 4
temp.23 = fix 2
r.24 = temp.23
temp.25 = fix 3.69921875
val.26 = temp.25
temp.27 = val.26
temp.28 = builtin fix@floor(temp.27)
f.29 = temp.28
temp.30 = f.29
storeprop temp.30, 0
return
